--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
             --gray: #666;
         }
         .pronunciation {
-            font-size: 0.7rem;
-            color: var(--light-gray);
+            font-size: 0.7rem; 
+            //color: var(--light-gray);
+            color: gray;
             position: absolute;
             right: -5.5rem;
             bottom: 0.4rem;
@@ -115,22 +116,23 @@
     <header class="header">
         <div class="logo-container">
             <span class="logo-label">huambda | 华华计算</span>
-            <span class="pronunciation">[ˈwɑːmdə]</span>
+            <span class="pronunciation">&nbsp&nbsp&nbsp&nbsp[ˈwɑːmdə]<br>it's huambda<br>, not lambda</span>
 
             <img src="https://huambda.github.io/huambda_logo.png" alt="huambda logo" alt="logo" class="logo">
         </div>
     </header>
     <div class="interests">
         <div class="interest-section">
+            <!--div class="interest-title">兴趣领域</div-->
             <div class="interest-content">
-                <p>I’m drawn to symbols and calculations, and I’m curious about emotions and beauty.</p>
-                <p>我喜欢符号、计算，对情绪与美感到好奇。</p>
+                <p>I'm Hua. I’m drawn to symbols and calculations, and I’m curious about emotions and beauty.</p>
+                <p>我是华。我喜欢符号、计算，对情绪与美感到好奇。</p>
                 <p><a href='https://github.com/huambda'>github.com/huambda</a></p>
                 <p>huambda@gmail.com</p>
                 <p><a href='https://mp.weixin.qq.com/s/6XsKmVdgqScG0d6qaZOvQA'>公众号</a>&nbsp&nbsp<a href='https://www.xiaohongshu.com/user/profile/66358086000000000b03026b'>小红书</a>&nbsp&nbsp<a href="https://x.com/huambda">x/twitter</a></p>
             </div>
         </div>
-
+        
     </div>
 </body>
 </html>
