mosquito-nets-an-excellent-divide-and-conquer-strategy

--- a/mosquito-nets-an-excellent-divide-and-conquer-strategy/en.html
+++ b/mosquito-nets-an-excellent-divide-and-conquer-strategy/en.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="huambda | 华华计算 - Focused on symbols, computation, emotions and beauty">
     <meta name="keywords" content="huambda, 华华计算, symbols, computation, emotions, beauty, technology">
     <meta name="author" content="huambda">
-    <title>huambda | 华华计算</title>
+    <title>Mosquito Nets: An Excellent "Divide and Conquer" Strategy - huambda | 华华计算</title>
     <link rel="icon" type="image/png" href="https://huambda.github.io/huambda_logo.ico">
     <style>
         :root {
@@ -15,15 +15,13 @@
             --gray: #666;
         }
         .pronunciation {
-            font-size: 0.7rem; 
-            //color: var(--light-gray);
+            font-size: 0.7rem;
             color: gray;
             position: absolute;
             right: -5.5rem;
             bottom: 0.4rem;
             white-space: nowrap;
         }
-
 
         body {
             font-family: 'Helvetica Neue', Arial, 'Hiragino Sans GB', sans-serif;
@@ -66,7 +64,6 @@
             margin: 0;
             font-size: 1.4rem;
             padding-left: 0.1rem;
-            //border-left: 1px solid var(--black);
             height: 50px;
             display: flex;
             align-items: center;
@@ -94,6 +91,44 @@
             line-height: 1.8;
         }
 
+        .article-content {
+            margin-top: 2rem;
+            line-height: 1.8;
+        }
+
+        .nav-links {
+            margin-top: 2rem;
+        }
+
+        .nav-links a {
+            margin-right: 1rem;
+            color: var(--black);
+            text-decoration: none;
+            border-bottom: 1px solid var(--gray);
+        }
+
+        .nav-links a:hover {
+            border-bottom: 2px solid var(--black);
+        }
+
+        .article-date {
+            margin-top: 2rem;
+            font-style: italic;
+            color: var(--gray);
+            text-align: right;
+        }
+
+        .article-page .header {
+            margin-bottom: 1rem;
+        }
+        
+        .article-page .logo-container {
+            transform: scale(0.7);
+            transform-origin: left top;
+            margin-right: 1rem;
+        }
+
+
         @media (max-width: 768px) {
             .header {
                 flex-direction: column;
@@ -112,33 +147,28 @@
         }
     </style>
 </head>
-<body>
+<body class="article-page">
     <header class="header">
         <div class="logo-container">
             <span class="logo-label">huambda | 华华计算</span>
-            <span class="pronunciation">&nbsp&nbsp&nbsp&nbsp[ˈwɑːmdə]<br>it's huambda<br>, not lambda</span>
-
-            <img src="https://huambda.github.io/huambda_logo.png" alt="huambda logo" alt="logo" class="logo">
+            <span class="pronunciation">&nbsp;&nbsp;&nbsp;&nbsp;[ˈwɑːmdə]<br>it's huambda<br>, not lambda</span>
+            <img src="https://huambda.github.io/huambda_logo.png" alt="huambda logo" class="logo">
         </div>
     </header>
-    <div class="interests">
-        <div class="interest-section">
-            <!--div class="interest-title">兴趣领域</div-->
-            <div class="interest-content">
-                <p>I'm Hua. I’m drawn to symbols and calculations, and I’m curious about emotions and beauty.</p>
-                <p>我是华。我喜欢符号、计算，对情绪与美感到好奇。</p>
-
-<div class="interest-section" id="articles-section">
-<br><div class="interest-title">blog</div>
-<div class="interest-content">
-<p><a href="mosquito-nets-an-excellent-divide-and-conquer-strategy/en.html">Mosquito Nets: An Excellent "Divide and Conquer" Strategy</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mosquito-nets-an-excellent-divide-and-conquer-strategy/zh.html">蚊帐：一种极佳的“分治法”</a></p>
-</div>
-</div>
-
-<p>huambda@gmail.com&nbsp&nbsp<a href='https://github.com/huambda'>github</a>&nbsp&nbsp<a href="https://x.com/huambda">x/twitter</a>&nbsp&nbsp<a href='https://mp.weixin.qq.com/s/6XsKmVdgqScG0d6qaZOvQA'>公众号</a></p>
-            </div>
-        </div>
-        
+    <div class="nav-links">
+        <a href="../index.html">Home</a>
+        <a href="zh.html">中文</a>
+    </div>
+    <div class="article-content">
+        <h1>Mosquito Nets: An Excellent "Divide and Conquer" Strategy</h1>
+        <p>April brings active mosquitoes in Guangzhou.</p>
+<p>Having washed and dried the mosquito net during the day, I set it up before bedtime. As I lay beneath its canopy, it dawned on me: this humble net embodies the essence of "divide and conquer".</p>
+<p>The algorithmic principle dictates decomposing an intractable problem into manageable subproblems. Mosquitoes pose their challenge through persistent harassment—attempt to strike, and they retreat to ceilings or shadowy corners. Essentially, the combat zone spans the entire room, rendering defense inefficient.</p>
+<p>The mosquito net brilliantly redefines this spatial warfare. It bisects the room into two strategic domains:</p>
+<p>Exterior Zone: Requires no intervention (difficulty level: 0).</p>
+<p>Interior Zone: Confined space allows full tactical control. The net's taut surfaces eliminate hiding spots, reducing mosquito elimination to near-zero difficulty.</p>
+<p>This elegant spatial partitioning epitomizes divide-and-conquer methodology. Thus ensconced, I drift into undisturbed slumber.</p>
+<div class="article-date">Translated by deepseek    2025.04.12</div>
     </div>
 </body>
 </html>
