--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </div>
 </div>
 
-<p>huambda@gmail.com&nbsp&nbsp<a href='https://github.com/huambda'>github</a>&nbsp&nbsp<a href="https://x.com/huambda">x/twitter</a>&nbsp&nbsp<a href='https://mp.weixin.qq.com/s/6XsKmVdgqScG0d6qaZOvQA'>公众号</a></p>
+<p>huambda@gmail.com<br><br><a href='https://github.com/huambda'><img src="https://huambda.github.io/github.svg" alt="GitHub" width="24" height="24"></a>&nbsp&nbsp<a href="https://x.com/huambda"><img src="https://huambda.github.io/x.svg" alt="GitHub" width="24" height="24"></a>&nbsp&nbsp<a href='https://mp.weixin.qq.com/s/6XsKmVdgqScG0d6qaZOvQA'><img src="https://huambda.github.io/wechat.svg" alt="GitHub" width="24" height="24"></a></p>
             </div>
         </div>
     </div>
