--- a/mosquito-net-an-excellent-example-of-the-divide-and-conquer-method/en.html
+++ b/mosquito-net-an-excellent-example-of-the-divide-and-conquer-method/en.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="huambda | 华华计算 - Focused on symbols, computation, emotions and beauty">
     <meta name="keywords" content="huambda, 华华计算, symbols, computation, emotions, beauty, technology">
     <meta name="author" content="huambda">
-    <title>huambda | 华华计算</title>
+    <title>Mosquito Net: An Excellent Example of the "Divide and Conquer" Method - huambda | 华华计算</title>
     <link rel="icon" type="image/png" href="https://huambda.github.io/huambda_logo.ico">
     <style>
         :root {
@@ -15,15 +15,13 @@
             --gray: #666;
         }
         .pronunciation {
-            font-size: 0.7rem; 
-            //color: var(--light-gray);
+            font-size: 0.7rem;
             color: gray;
             position: absolute;
             right: -5.5rem;
             bottom: 0.4rem;
             white-space: nowrap;
         }
-
 
         body {
             font-family: 'Helvetica Neue', Arial, 'Hiragino Sans GB', sans-serif;
@@ -66,7 +64,6 @@
             margin: 0;
             font-size: 1.4rem;
             padding-left: 0.1rem;
-            //border-left: 1px solid var(--black);
             height: 50px;
             display: flex;
             align-items: center;
@@ -94,6 +91,44 @@
             line-height: 1.8;
         }
 
+        .article-content {
+            margin-top: 2rem;
+            line-height: 1.8;
+        }
+
+        .nav-links {
+            margin-top: 2rem;
+        }
+
+        .nav-links a {
+            margin-right: 1rem;
+            color: var(--black);
+            text-decoration: none;
+            border-bottom: 1px solid var(--gray);
+        }
+
+        .nav-links a:hover {
+            border-bottom: 2px solid var(--black);
+        }
+
+        .article-date {
+            margin-top: 2rem;
+            font-style: italic;
+            color: var(--gray);
+            text-align: right;
+        }
+
+        .article-page .header {
+            margin-bottom: 1rem;
+        }
+        
+        .article-page .logo-container {
+            transform: scale(0.7);
+            transform-origin: left top;
+            margin-right: 1rem;
+        }
+
+
         @media (max-width: 768px) {
             .header {
                 flex-direction: column;
@@ -112,34 +147,28 @@
         }
     </style>
 </head>
-<body>
+<body class="article-page">
     <header class="header">
         <div class="logo-container">
             <span class="logo-label">huambda | 华华计算</span>
-            <span class="pronunciation">&nbsp&nbsp&nbsp&nbsp[ˈwɑːmdə]<br>it's huambda<br>, not lambda</span>
-
-            <img src="https://huambda.github.io/huambda_logo.png" alt="huambda logo" alt="logo" class="logo">
+            <span class="pronunciation">&nbsp;&nbsp;&nbsp;&nbsp;[ˈwɑːmdə]<br>it's huambda<br>, not lambda</span>
+            <img src="https://huambda.github.io/huambda_logo.png" alt="huambda logo" class="logo">
         </div>
     </header>
-    <div class="interests">
-        <div class="interest-section">
-            <!--div class="interest-title">兴趣领域</div-->
-            <div class="interest-content">
-                <p>I'm Hua. I’m drawn to symbols and calculations, and I’m curious about emotions and beauty.</p>
-                <p>我是华。我喜欢符号、计算，对情绪与美感到好奇。</p>
-
-<div class="interest-section" id="articles-section">
-<br><div class="interest-title">blog</div>
-<div class="interest-content">
-<p><a href="face-both-input-and-output/en.html">Face: Both Input and Output</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="face-both-input-and-output/zh.html">面容：既是输入，也是输出</a></p>
-<p><a href="mosquito-net-an-excellent-example-of-the-divide-and-conquer-method/en.html">Mosquito Net: An Excellent Example of the "Divide and Conquer" Method</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mosquito-net-an-excellent-example-of-the-divide-and-conquer-method/zh.html">蚊帐：一种极佳的“分治法”</a></p>
-<p><a href="mosquito-nets-an-excellent-divide-and-conquer-strategy/en.html">Mosquito Nets: An Excellent "Divide and Conquer" Strategy</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="mosquito-nets-an-excellent-divide-and-conquer-strategy/zh.html">蚊帐：一种极佳的“分治法”</a></p>
-</div>
-</div>
-
-<p>huambda@gmail.com<br><br><a href='https://github.com/huambda'><img src="https://huambda.github.io/github.svg" alt="GitHub" width="24" height="24"></a>&nbsp&nbsp<a href="https://x.com/huambda"><img src="https://huambda.github.io/x.svg" alt="GitHub" width="24" height="24"></a>&nbsp&nbsp<a href='https://mp.weixin.qq.com/s/6XsKmVdgqScG0d6qaZOvQA'><img src="https://huambda.github.io/wechat.svg" alt="GitHub" width="24" height="24"></a></p>
-            </div>
-        </div>
+    <div class="nav-links">
+        <a href="../index.html">Home</a>
+        <a href="zh.html">中文</a>
+    </div>
+    <div class="article-content">
+        <h1>Mosquito Net: An Excellent Example of the "Divide and Conquer" Method</h1>
+        <p>April in Guangzhou brings active mosquitoes.</p>
+<p>After washing and drying my mosquito net during the day, I set it up before bed. Lying down, I realized: A mosquito net embodies the "divide and conquer" strategy.</p>
+<p>The divide-and-conquer approach involves breaking down a complex problem into smaller, manageable parts to solve individually. Mosquitoes are troublesome because they constantly harass you, only to escape to the ceiling or hidden corners when you try to swat them. In essence, the problem space—the entire room—is too vast to handle effectively.</p>
+<p>The mosquito net, however, partitions this problem space. It splits the room into two distinct zones:</p>
+<p>The area outside the net requires no effort to manage (difficulty level: 0).</p>
+<p>The confined space inside the net puts everything within easy reach of human hands. The flat surfaces of the net leave mosquitoes with nowhere to hide, making even the few that enter easy to eliminate (difficulty level: nearly 0).</p>
+<p>By dividing the space so effectively, this ingenious application of divide and conquer allows me to sleep soundly.</p>
+<div class="article-date">Translated by deepseek. The prompt is: "Translated into clear, accurate, and natural English." 2025.05.21</div>
     </div>
 </body>
 </html>
